--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="text_system">#8A000000</color>
     <color name="text_9b9b9b">#9b9b9b</color>
     <color name="text_999999">#999999</color>
+    <color name="text_4d4d4d">#4d4d4d</color>
 </resources>
