--- a/app/src/main/res/drawable/selector_ic_home.xml
+++ b/app/src/main/res/drawable/selector_ic_home.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/ic_home_pressed" android:state_checked="true"/>
-    <item android:drawable="@drawable/ic_home_normal"/>
+    <item android:state_checked="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/dp_5"/>
+            <solid android:color="@color/main_color"/>
+
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/dp_5"/>
+            <stroke android:width="@dimen/dp_1"
+                android:color="@color/main_color"/>
+            <solid android:color="@color/trans"/>
+
+        </shape>
+    </item>
 </selector>
