--- a/app/src/main/res/layout/fragment_home_img.xml
+++ b/app/src/main/res/layout/fragment_home_img.xml
@@ -1,12 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="horizontal"
+              android:padding="@dimen/dp_10"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="图片信息"/>
+        android:orientation="vertical">
+
+
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/sdv_big"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_180"
+            app:actualImageScaleType="centerCrop"
+            app:placeholderImage="@drawable/bg_login"
+            app:placeholderImageScaleType="focusCrop"
+            />
+
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_marginTop="@dimen/dp_3"
+            android:paddingBottom="@dimen/dp_3"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:textSize="@dimen/sp_10"
+            android:text="2018.03.15 15:30"
+            android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/ic_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_nearby_normal"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/img_recyclerView"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"/>
+
+            <ImageView
+                android:id="@+id/ic_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_nearby_pressed"/>
+        </LinearLayout>
+    </LinearLayout>
+    
+    <LinearLayout
+        android:gravity="center_horizontal"
+        android:paddingLeft="@dimen/dp_20"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_20"
+            android:gravity="center"
+            android:hint="请输入查找日期"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:background="@drawable/shape_et_search"/>
+
+        <LinearLayout
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginBottom="@dimen/dp_5"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:gravity="center"
+                android:text="害虫品种"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_12"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:gravity="center"
+                android:text="生长阶段"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_12"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:gravity="center"
+                android:text="害虫数量"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_12"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+        </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/info_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
 </LinearLayout>
