--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="trans">#00000000</color>
     <color name="white">#ffffff</color>
     <color name="black_50">#80000000</color>
+    <color name="black">#000000</color>
 
     <color name="text_system">#8A000000</color>
     <color name="text_9b9b9b">#9b9b9b</color>
