--- a/app/src/main/res/layout/fragment_home_line.xml
+++ b/app/src/main/res/layout/fragment_home_line.xml
@@ -1,12 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="15dp">
 
-    <TextView
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="曲线信息"/>
+        android:layout_height="0dp"
+        android:layout_weight="0.18"
+        android:background="@color/white">
+
+        <TextView
+            android:id="@+id/tv_char_leader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_5"
+            android:text="负责人"
+            android:textSize="18sp" />
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/sp_char_leader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/tv_char_leader"
+            android:background="@drawable/shape_et_sp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_char_crops"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_toRightOf="@id/sp_char_leader"
+            android:text="作物"
+            android:textSize="18sp" />
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/sp_char_crops"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_char_crops"
+            android:background="@drawable/shape_et_sp"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_char_bug"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_toRightOf="@id/sp_char_crops"
+
+            android:text="虫种"
+            android:textSize="18sp" />
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/sp_char_bug"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_char_bug"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_char_class"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_toRightOf="@id/sp_char_bug"
+            android:text="类型"
+            android:textSize="18sp" />
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/sp_char_class"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_char_class"
+            android:textSize="18sp" />
+
+
+        <TextView
+            android:id="@+id/tv_char_filter_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_6"
+            android:text="筛选范围"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_char_time_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_6"
+            android:layout_marginLeft="20dp"
+
+            android:layout_toRightOf="@id/tv_char_filter_time"
+            android:text="从"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/bt_char_time_start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_6"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_toRightOf="@id/tv_char_time_start"
+            android:background="@drawable/shape_et_sp"
+            android:paddingBottom="@dimen/dp_1"
+            android:paddingLeft="@dimen/dp_5.5"
+            android:paddingRight="@dimen/dp_5.5"
+            android:paddingTop="@dimen/dp_1"
+            android:text="2018-03-17"
+            android:textSize="17sp" />
+
+        <TextView
+            android:id="@+id/tv_char_time_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_6"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_toRightOf="@id/bt_char_time_start"
+            android:text="到"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/bt_char_time_end"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_6"
+            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_toRightOf="@+id/tv_char_time_end"
+            android:background="@drawable/shape_et_sp"
+            android:paddingBottom="@dimen/dp_1"
+            android:paddingLeft="@dimen/dp_5.5"
+            android:paddingRight="@dimen/dp_5.5"
+            android:paddingTop="@dimen/dp_1"
+            android:text="2018-03-20"
+            android:textSize="17sp" />
+
+        <TextView
+            android:id="@+id/tv_char_time_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_6"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_toRightOf="@id/sp_char_bug"
+            android:text="时间类型"
+            android:textSize="18sp" />
+
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/sp_char_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@id/tv_char_time_filter"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_7"
+            android:layout_marginLeft="@dimen/dp_20"
+            android:layout_toRightOf="@id/sp_char_filter"
+            android:background="@drawable/bt_bg"
+            android:paddingBottom="@dimen/dp_1"
+            android:paddingLeft="@dimen/dp_15"
+            android:paddingRight="@dimen/dp_15"
+            android:paddingTop="@dimen/dp_1"
+            android:text="确定"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_weight="0.7"
+        android:background="@color/white">
+
+        <TextView
+            android:id="@+id/tv_char_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:ems="1"
+            android:text="监测虫情数量" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/lc_chart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="25dp" />
+
+        <TextView
+            android:id="@+id/tv_char_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="时间（月-日）" />
+    </RelativeLayout>
+
+
 </LinearLayout>
