--- a/app/src/main/res/layout/activity_bind_company.xml
+++ b/app/src/main/res/layout/activity_bind_company.xml
@@ -21,7 +21,7 @@
             android:textSize="@dimen/sp_12"
             android:layout_marginRight="@dimen/dp_20"
             android:maxLines="1"
-            android:text="账户名accountName"/>
+            android:text="账    户    名"/>
         <FrameLayout
             android:layout_width="@dimen/dp_160"
             android:layout_height="@dimen/dp_20"
@@ -48,7 +48,7 @@
             android:textSize="@dimen/sp_12"
             android:layout_marginRight="@dimen/dp_20"
             android:maxLines="1"
-            android:text="地址"/>
+            android:text="地             址"/>
         <FrameLayout
             android:layout_width="@dimen/dp_160"
             android:layout_height="@dimen/dp_20"
@@ -75,40 +75,13 @@
             android:textSize="@dimen/sp_12"
             android:layout_marginRight="@dimen/dp_20"
             android:maxLines="1"
-            android:text="维护人姓名maintain"/>
+            android:text="维护人姓名"/>
         <FrameLayout
             android:layout_width="@dimen/dp_160"
             android:layout_height="@dimen/dp_20"
             android:background="@drawable/selector_edt_grey_storke_conner">
             <EditText
                 android:id="@+id/bind_company_url_edt_main_tain"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/dp_12"
-                android:maxLines="1"
-                android:background="@null"
-                />
-        </FrameLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_12"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_12"
-            android:layout_marginRight="@dimen/dp_20"
-            android:maxLines="1"
-            android:text="姓名name"/>
-        <FrameLayout
-            android:layout_width="@dimen/dp_160"
-            android:layout_height="@dimen/dp_20"
-            android:background="@drawable/selector_edt_grey_storke_conner">
-            <EditText
-                android:id="@+id/bind_company_url_edt_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/dp_12"
@@ -157,7 +130,34 @@
             android:textSize="@dimen/sp_12"
             android:layout_marginRight="@dimen/dp_20"
             android:maxLines="1"
-            android:text="密码"/>
+            android:text="站    点    名"/>
+        <FrameLayout
+            android:layout_width="@dimen/dp_160"
+            android:layout_height="@dimen/dp_20"
+            android:background="@drawable/selector_edt_grey_storke_conner">
+            <EditText
+                android:id="@+id/bind_company_url_edt_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:maxLines="1"
+                android:background="@null"
+                />
+        </FrameLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dp_12"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_12"
+            android:layout_marginRight="@dimen/dp_20"
+            android:maxLines="1"
+            android:text="密            码 "/>
         <FrameLayout
             android:layout_width="@dimen/dp_160"
             android:layout_height="@dimen/dp_20"
@@ -181,7 +181,7 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/bind_company_url_tv_sure"
-            android:layout_width="@dimen/dp_108"
+            android:layout_width="@dimen/dp_110"
             android:layout_height="@dimen/dp_21"
             android:gravity="center"
             android:textColor="@color/white"
@@ -191,7 +191,7 @@
             android:text="确定"/>
         <TextView
             android:id="@+id/bind_company_url_tv_cancle"
-            android:layout_width="@dimen/dp_108"
+            android:layout_width="@dimen/dp_110"
             android:layout_height="@dimen/dp_21"
             android:gravity="center"
             android:textSize="@dimen/sp_12"
