--- a/app/src/main/res/layout/activity_task_setting.xml
+++ b/app/src/main/res/layout/activity_task_setting.xml
@@ -9,6 +9,42 @@
     android:background="@color/white"
     android:gravity="center"
     android:layout_margin="@dimen/dp_14">
+    <RelativeLayout
+        android:layout_width="@dimen/dp_235"
+        android:layout_height="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_12">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_12"
+            android:text="有无水印"/>
+        <com.alex.witAg.view.EaseSwitchButton
+            android:id="@+id/set_capture_swt_btn_logo"
+            android:layout_alignParentRight="true"
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="@dimen/dp_18">
+        </com.alex.witAg.view.EaseSwitchButton>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="@dimen/dp_235"
+        android:layout_height="@dimen/dp_20"
+        android:layout_marginTop="@dimen/dp_12">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_12"
+            android:text="成图质量"/>
+        <org.angmarch.views.NiceSpinner
+            android:id="@+id/set_capture_swt_spinner"
+            android:background="@drawable/selector_shape_grey_bg_conner"
+            android:layout_alignParentRight="true"
+            android:layout_width="@dimen/dp_48"
+            android:layout_height="@dimen/dp_30">
+        </org.angmarch.views.NiceSpinner>
+
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -19,10 +55,10 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/sp_12"
             android:layout_marginRight="@dimen/dp_20"
-            android:text="开始时间"/>
+            android:text="开始时间           "/>
         <TextView
             android:id="@+id/set_capture_tv_choose_time"
-            android:layout_width="@dimen/dp_168"
+            android:layout_width="@dimen/dp_130"
             android:layout_height="@dimen/dp_20"
             android:text="请选择开始时间"
             android:gravity="center"
@@ -40,7 +76,7 @@
             android:layout_height="wrap_content"
             android:textSize="@dimen/sp_12"
             android:layout_marginRight="@dimen/dp_20"
-            android:text="时间间隔"/>
+            android:text="时间间隔(小时)"/>
         <FrameLayout
             android:layout_width="@dimen/dp_130"
             android:layout_height="@dimen/dp_20"
@@ -56,6 +92,7 @@
                 />
         </FrameLayout>
         <TextView
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sp_11"
@@ -63,45 +100,10 @@
             android:text="小时"/>
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="@dimen/dp_235"
-        android:layout_height="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_12">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_12"
-            android:text="有无水印"/>
-        <com.alex.witAg.view.EaseSwitchButton
-            android:id="@+id/set_capture_swt_btn_logo"
-            android:layout_alignParentRight="true"
-            android:layout_width="@dimen/dp_48"
-            android:layout_height="@dimen/dp_30">
-        </com.alex.witAg.view.EaseSwitchButton>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="@dimen/dp_235"
-        android:layout_height="@dimen/dp_20"
-        android:layout_marginTop="@dimen/dp_12">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_12"
-            android:text="成图质量"/>
-        <org.angmarch.views.NiceSpinner
-            android:id="@+id/set_capture_swt_spinner"
-            android:layout_alignParentRight="true"
-            android:layout_width="@dimen/dp_48"
-            android:layout_height="@dimen/dp_30">
-        </org.angmarch.views.NiceSpinner>
-
-    </RelativeLayout>
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10"
         android:layout_marginBottom="@dimen/dp_14"
         android:orientation="horizontal">
         <TextView
